[project]
name = "pyvrfs"
version = "0.1.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython"
]

[tool.poetry]
name = "pyvrfs"
version = "0.1.0"
description = "Python bindings for the ark-ec-vrfs library"
authors = ["0trust3r"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^1.7.7"
pytest = "^8.3.4"
pdoc = "^15.0.0"
pytest-profiling = "^1.7.0"
pytest-xdist = "^3.6.1"

[tool.poetry.group.dev.dependencies]
maturin = "^1.7.7"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
